--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,22 @@
 {
-    // Используйте IntelliSense, чтобы узнать о возможных атрибутах.
-    // Наведите указатель мыши, чтобы просмотреть описания существующих атрибутов.
-    // Для получения дополнительной информации посетите: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "cwd": "${workspaceFolder}/Core",
-            "executable": "${workspaceFolder}/build/${fileWorkspaceFolderBasename}.elf",
-            "name": "Debug with OpenOCD",
-            "request": "launch",
-            "type": "cortex-debug",
-            "servertype": "openocd",
-            "configFiles": [
-                "interface/stlink-v2.cfg",
-                "target/stm32f4x.cfg"
-            ],
-            "searchDir": [],
-            "runToEntryPoint": "main",
-            "showDevDebugOutput": "none",
-            "svdFile": "${workspaceFolder}/STM32F401.svd"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "cwd": "${workspaceFolder}/Core",
+      "executable": "${workspaceFolder}/build/${fileWorkspaceFolderBasename}.elf",
+      "name": "Debug with OpenOCD",
+      "request": "launch",
+      "type": "cortex-debug",
+      "servertype": "openocd",
+      "configFiles": [
+        "interface/stlink-v2.cfg",
+        "target/stm32f4x.cfg"
+      ],
+      "searchDir": [],
+      "runToEntryPoint": "main",
+      "showDevDebugOutput": "none",
+      "svdFile": "${workspaceFolder}/STM32F401.svd",
+      "preLaunchTask": "Build"
+    }
+  ]
 }
